--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "manage",
+  "name": "admin",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -27,6 +27,8 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "less": "^3.0.4",
+    "less-loader": "^5.0.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
