--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "ant-design-vue": "^1.7.2",
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "nprogress": "^0.2.0",
+    "store": "^2.0.12",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "webpack-theme-color-replacer": "^1.3.14"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
